added publish script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "publish": "ng build --prod --base-href 'https://ariqfraser.github.io/Wheel-Decide/' && ngh --dir dist/wheel-decide"
   },
   "private": true,
   "dependencies": {
