--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "publish": "ng build --base-href=https://ariqfraser.github.io/Wheel-Decide/ && ngh --dir dist/wheel-decide"
+    "deploy": "ng build --base-href=https://ariqfraser.github.io/Wheel-Decide/ && ngh --dir dist/wheel-decide"
   },
   "private": true,
   "dependencies": {
